--- a/client/src/components/Aboutme/Aboutme.css
+++ b/client/src/components/Aboutme/Aboutme.css
@@ -7,7 +7,10 @@ h4 {
     /* font-weight: bold; */
 }
 
-
+.aw-btn {
+	--button-hover-pressure: 4;
+--transform-speed: 0.4s;
+}
 
 body {
 	width: 100wh;
