--- a/client/src/components/ProjectCard/ProjectCard.css
+++ b/client/src/components/ProjectCard/ProjectCard.css
@@ -9,8 +9,15 @@
     margin-bottom: 30px;
     display: inline-block;
     margin-right: 30px;
+    opacity: 0.7;
     
-    
+  }
+
+  .project-card:hover {
+    width: 330px;
+    height: 310px;
+   
+    opacity: 1;
   }
 
   .titre {
