--- a/client/src/components/Skills/Skills.css
+++ b/client/src/components/Skills/Skills.css
@@ -1,16 +1,19 @@
 .tec-skills {
     font-family: 'Cinzel', serif;
     /* text-align: left; */
+    color: black;
     
 }
 
 .education {
     font-family: 'Cinzel', serif;
+    color: black;
 }
 
 .marketing {
     /* text-align: left; */
     font-family: 'Cinzel', serif;
+    color: black;
 }
 
 
