--- a/client/src/components/ProjectCard/ProjectCard.css
+++ b/client/src/components/ProjectCard/ProjectCard.css
@@ -28,7 +28,7 @@
   header {
     
     font-size: 50px;
-    font-family: 'Meddon', cursive;
+    font-family: 'Fascinate Inline', cursive;
     font-weight: bolder;
     letter-spacing: 2px;
     color: black
